# MATLab_Rocket_Model

./: .gitattributes  .gitignore  ControlSystemDesign.mlx  GimbalThrustModel.m  LookupInitializer.m  README.md  STEVE_Simulation.slx  aeroData.CSV  controller_design_live.mlx  create_rocket_kml.py  initialize_aeroData.m  initialize_parameters.m  lookup_data.mat  rocket_trajectory.kml  rocket_trajectory_100fps.csv  rocketpy_animation.py  visualizeRocketSimulation.m
ControlSystemsPractice/: Matlab_c2D_function.mlx  PolePlacement.mlx
LightweightAirplaneDesignExample/: LightweightAirplaneDesignExample.mlx  asbSkyHogg.slx
RCAM_simulation/: RCAM_model.m
Robust_Control_Scenarios/: Active_Suspension_Robust_Control.mlx  Robust_Rocket_ControlSystem_v01.mlx  Spinning_Sattelite.mlx
STEVE_Simulator/: ControlSystemDesign.m  GimbalThrustModel.m  NozzleActuatorCalculations.mlx  STEVE_Simulation.slx  STEVE_Simulations.slx  STeVe_CG_CP.m  actuator_models.slx  cleanup_duplicates.sh  initialize_parameters.m  lookup_data.mat  rocket_trajectory_100fps.csv  rocket_trajectory_static.kml  rocketpy_animation.py  servo_model_for_control.mat  visualizeRocketSimulation.m  visualize_rocket_3d.py
STeVe_Data/: Steve_aero_plots.m
SimpleRocketModel/: RASAeroPlot.py  RocketModel.m  RocketSimulation.slx  initialize_Constants.m  testRocketModel.m  (+1 more)
firmware/pico/: CMakeLists.txt  CMakeUserPresets.json
firmware/pico/apps/HIL/: CMakeLists.txt  main.c
firmware/pico/apps/imu_reading/: CMakeLists.txt  lwipopts.h  main.c  pico_lwip_opts.h  plots.m
firmware/pico/apps/imu_reading/html/: index.html
(+354 files in other folders)
